--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,6 @@
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
 
-
 #root {
   display: flex;
   flex-direction: column;
@@ -22,10 +21,17 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #1a1a1ab2;
-  color: #ffffff;
   overflow-x: hidden;
 }
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 h1 {
   font-size: 3.2em;
