--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import '@fontsource/roboto/400.css';
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
+@import './assets/normalize.css';
 
 #root {
   display: flex;
@@ -13,6 +14,11 @@
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 body {
@@ -31,7 +37,6 @@ main {
   justify-content: center;
   align-items: center;
 }
-
 
 h1 {
   font-size: 3.2em;
