--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,4 +11,12 @@
     user-select: none;
     cursor: pointer;
   }
+
+  a:not(.active) {
+    opacity: 1;
+  }
+}
+
+.active {
+  opacity: 0.7;
 }
