--- a/src/routes/HomePage/Home.module.scss
+++ b/src/routes/HomePage/Home.module.scss
@@ -2,6 +2,15 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: start;
+  padding: 0 50px;
+
+  form {
+    margin: 50px 0 20px 0;
+  }
+
+  ul {
+    margin: 0 auto;
+  }
 }
