--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: rgb(214, 214, 214);
 }
 
 main {
@@ -36,9 +37,22 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: center;
+  max-width: 1200px;
+  width: 100%;
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px 50px;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+@media (min-width: 1400px) {
+  body {
+    width: 1400px;
+    margin: 0 auto;
+  }
 }
